--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,1 +1,10 @@
+// @import 'assets/reset';
+@import 'mixins/create-selector-list';
+@import 'vars/include-fonts';
+@import 'vars/colors';
 @import 'modules/base';
+@import 'modules/page';
+@import 'modules/button';
+@import 'modules/form';
+@import 'modules/login';
+@import 'modules/box';
