--- a/main.css
+++ b/main.css
@@ -18,6 +18,16 @@
   src: local("Libre Baskerville Bold"), local("LibreBaskerville-Bold"), url("assets/fonts/libre-baskerville-v7-latin-700.eot?#iefix") format("embedded-opentype"), url("assets/fonts/libre-baskerville-v7-latin-700.woff2") format("woff2"), url("assets/fonts/libre-baskerville-v7-latin-700.woff") format("woff"), url("assets/fonts/libre-baskerville-v7-latin-700.ttf") format("truetype"), url("assets/fonts/libre-baskerville-v7-latin-700.svg#LibreBaskerville") format("svg");
   /* Legacy iOS */
 }
+/* roboto-regular - latin */
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/roboto-v20-latin-regular.eot");
+  /* IE9 Compat Modes */
+  src: local("Roboto"), local("Roboto-Regular"), url("../fonts/roboto-v20-latin-regular.eot?#iefix") format("embedded-opentype"), url("../fonts/roboto-v20-latin-regular.woff2") format("woff2"), url("../fonts/roboto-v20-latin-regular.woff") format("woff"), url("../fonts/roboto-v20-latin-regular.ttf") format("truetype"), url("../fonts/roboto-v20-latin-regular.svg#Roboto") format("svg");
+  /* Legacy iOS */
+}
 body {
   font-family: "Libre Baskerville", serif;
 }
@@ -26,38 +36,66 @@ body {
   width: 100%;
 }
 
+h3 {
+  font-family: "Libre Baskerville", serif;
+}
+
 p {
   margin-bottom: 0;
+}
+
+.margin-bottom-0 {
+  margin-bottom: 0;
+}
+
+.margin-bottom-1 {
+  margin-bottom: 1rem;
+}
+
+.margin-bottom-2 {
+  margin-bottom: 2rem;
+}
+
+.margin-bottom-3 {
+  margin-bottom: 3rem;
 }
 
 .page {
   padding-top: 1rem;
 }
+.page__next-date {
+  display: block;
+  padding-top: 1.5rem;
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  line-height: 1.3;
+  color: rgba(0, 0, 0, 0.6);
+}
 
 .button {
   display: inline-block;
   border: 2px solid #272158;
-  border-radius: 1.5rem;
-  padding: rem-calc(6) rem-calc(30);
+  border-radius: 2rem;
+  padding: 0.75rem 1.875rem;
   outline: 0;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 700;
   text-decoration: none;
   text-transform: uppercase;
   text-align: center;
   cursor: pointer;
   transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, transform 0.2s ease-in-out;
+  background-color: #fff;
+  color: #272158;
+}
+.button:focus, .button:hover {
   background-color: #272158;
   color: #fff;
 }
-.button:hover {
-  background-color: transparent;
-  color: #272158;
-}
 @media (hover: none) {
-  .button:hover {
-    color: #fff;
-    background-color: #272158;
+  .button:focus, .button:hover {
+    color: #272158;
+    background-color: #fff;
   }
 }
 
@@ -109,6 +147,9 @@ p {
 .form__text-input.has-error:before, .form__text-input.has-error:after {
   background-color: #f00;
 }
+.form__text-input.has-error label {
+  color: #f00;
+}
 .form__text-input input {
   display: block;
   width: 100%;
@@ -132,10 +173,10 @@ p {
   position: absolute;
   top: 1.5rem;
   left: 0;
-  font-size: 14px;
+  font-size: 16px;
   color: #dadce0;
   pointer-events: none;
-  transition: top 0.2s ease, font-size 0.2s ease, line-height 0.2s ease;
+  transition: top 0.2s ease, font-size 0.2s ease, line-height 0.2s ease, color 0.2s ease;
 }
 .form__error-icon {
   position: absolute;
@@ -160,6 +201,7 @@ p {
   right: 0;
   bottom: 0;
   background-color: #fff;
+  font-family: "Roboto", sans-serif;
   transition: transform 0.2s ease-in-out;
 }
 .login.is-inactive {
