--- a/src/scss/modules/_base.scss
+++ b/src/scss/modules/_base.scss
@@ -6,6 +6,27 @@ body {
   width: 100%;
 }
 
+h3 {
+  font-family: 'Libre Baskerville', serif;
+}
+
 p {
   margin-bottom: 0;
+}
+
+// utility classes
+.margin-bottom-0 {
+  margin-bottom: 0;
+}
+
+.margin-bottom-1 {
+  margin-bottom: 1rem;
+}
+
+.margin-bottom-2 {
+  margin-bottom: 2rem;
+}
+
+.margin-bottom-3 {
+  margin-bottom: 3rem;
 }
