--- a/src/scss/modules/_page.scss
+++ b/src/scss/modules/_page.scss
@@ -1,3 +1,14 @@
 .page {
   padding-top: 1rem;
+
+  &__next-date {
+    display: block;
+    padding-top: 1.5rem;
+
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    line-height: 1.3;
+
+    color: rgba($black, 0.6);
+  }
 }
