--- a/src/scss/modules/_button.scss
+++ b/src/scss/modules/_button.scss
@@ -1,32 +1,30 @@
 .button {
   display: inline-block;
 
-  border: 2px solid $blue;
-  border-radius: 2rem;
-  padding: 0.75rem 1.875rem;
+  border-radius: 4px;
+  padding: 0.5rem 1rem;
+  margin-bottom: 0;
   outline: 0;
 
   font-size: 18px;
-  font-weight: 700;
   text-decoration: none;
   text-transform: uppercase;
   text-align: center;
 
   cursor: pointer;
-  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out,
-    transform 0.2s ease-in-out;
+  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, transform 0.2s ease-in-out;
 
-  background-color: $white;
-  color: $blue;
+  background-color: $grey;
+  color: $dark-grey;
 
   // STATES
   &:focus,
   &:hover {
-    background-color: $blue;
+    background-color: $dark-grey;
     color: $white;
 
     @media (hover: none) {
-      color: $blue;
+      color: $dark-grey;
       background-color: $white;
     }
   }
