--- a/src/scss/modules/_login.scss
+++ b/src/scss/modules/_login.scss
@@ -14,7 +14,14 @@
 
   transition: transform 0.2s ease-in-out;
 
+  // STATES
   &.is-inactive {
     transform: translateY(-100%);
+  }
+
+  &__box {
+    padding: 2rem;
+    border-radius: 4px;
+    box-shadow: 0 0.25rem 1.5rem rgba(0, 0, 0, 0.12);
   }
 }
