--- a/main.css
+++ b/main.css
@@ -146,7 +146,7 @@ p {
   width: 100%;
 }
 .form__text-input.is-filled label, .form__text-input.is-focused label {
-  top: 0;
+  top: -0.25rem;
   font-size: 12px;
 }
 .form__text-input.has-error:before, .form__text-input.has-error:after {
@@ -163,6 +163,7 @@ p {
   -webkit-appearance: none;
   outline: 0;
   box-shadow: none;
+  height: auto;
   padding: 0;
   margin-bottom: 0;
   color: #000;
@@ -176,9 +177,10 @@ p {
 .form__text-input label {
   display: block;
   position: absolute;
-  top: 1.75rem;
+  top: 0.875rem;
   left: 0;
   font-size: 14px;
+  line-height: 1.5;
   color: #555;
   pointer-events: none;
   transition: top 0.2s ease, font-size 0.2s ease, line-height 0.2s ease, color 0.2s ease;
