--- a/main.css
+++ b/main.css
@@ -85,6 +85,7 @@ p {
   padding: 0.5rem 1rem;
   margin-bottom: 0;
   outline: 0;
+  font-family: "Roboto", sans-serif;
   font-size: 18px;
   text-decoration: none;
   text-align: center;
