--- a/src/scss/modules/_button.scss
+++ b/src/scss/modules/_button.scss
@@ -6,6 +6,7 @@
   margin-bottom: 0;
   outline: 0;
 
+  font-family: 'Roboto', sans-serif;
   font-size: 18px;
   text-decoration: none;
   text-align: center;
